# stock_agent

./: .env.example  .gitignore  README.md  _test_stream.py  backend.cjs  debug_output.txt  pyproject.toml  requirements.txt  start-server.ps1  test_boll.py  test_calibration.db  test_calibration.py  test_cross.py  test_dea.py  test_dea_only.py  test_dea_real.py  test_dea_simple.py  test_ema.py  test_full_calc.py  test_gmma.py  test_history.db  test_history.py  test_injector.db  test_injector.py  test_ma.py  test_macd.py  test_pipeline.py  test_real_multiagent.py  test_rsi.py  test_tool_registry.py  test_trend.py  test_trend_etf.py  test_trend_v2.py  test_vix.py
design/: architecture.md  error-handling.md  evaluation-plan.md  prompt-design.md
frontend/: index.html  index_new.html  package-lock.json  package.json  server.cjs  tailwind.config.js  vite_out.txt
frontend/src/: App.tsx  index.css
spec/: PRD.md  agent-state.md  data-sources.md  tool-specs.md
src/: __init__.py  api.py  main.py
src/agent/: loop.py  tools.py
src/agents/: __init__.py  base.py  decision.py  intel.py  llm_adapter.py  orchestrator.py  protocols.py  technical.py
src/analysis/: __init__.py  data_loader.py  sentiment.py  trend.py  valuation_score.py
src/memory/: __init__.py  calibration.py  history.py  injector.py
src/models/: __init__.py  errors.py  state.py  tool_result.py
src/prompts/: system.py
src/scoring/: engine.py
src/session/: store.py
src/tools/: __init__.py  kline.py  news.py  quote.py  registry.py  server.py  trend_tool.py  valuation.py
(+6 files in other folders)
