[project]
name = "stock-agent"
version = "0.1.0"
description = "Stock Analysis Agent - 学习 Agent 设计的实践项目"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "yfinance>=0.2.40",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
